# smile-nerd-font

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README_en.md  config.toml  preview.typ  pyproject.toml
scripts/: gen_live_preview.py  merge.py  patch_ligatures.py  render_preview.py  render_text.py
