[project]
name = "smile-nerd-font"
version = "1.0.0"
description = "A monospace font merging LXGW WenKai Mono (CJK) with FiraCode Nerd Font Mono (Latin/symbols/icons)"
readme = "README.md"
requires-python = ">=3.12"
license = "OFL-1.1"
authors = [
  { name = "SOV710", email = "chris916911179@outlook.com" },
]
keywords = [
  "cjk",
  "firacode",
  "font",
  "lxgw-wenkai",
  "monospace",
  "nerd-font",
  "programming-ligatures",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: SIL Open Font License 1.1 (OFL-1.1)",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Fonts",
]
dependencies = [
  "fonttools>=4.55.0",
]

[project.urls]
Homepage = "https://github.com/SOV710/smile-nerd-font"
Issues = "https://github.com/SOV710/smile-nerd-font/issues"
Repository = "https://github.com/SOV710/smile-nerd-font"
